[feature] finished journal cruds
