# internals/models/journalNotes.go
@@ -5,20 +5,16 @@ import "time"
 type JournalNote struct {
 	ID           uint      `gorm:"primary_key;auto_increment" json:"id"`
 	Date         time.Time `gorm:"not null" json:"date"`
-	MarkID       *uint     `gorm:"default:null" json:"mark_id"`
+	MarkID       uint      `gorm:"default:null" json:"mark_id"`
 	Mark         Mark      `gorm:"foreignKey:MarkID;references:ID" json:"mark"`
 	MarkedAt     time.Time `gorm:"default:null" json:"marked_at"`
-	UserID       *uint     `gorm:"default null" json:"user_id"`
+	UserID       uint      `gorm:"default null" json:"user_id"`
 	Student      User      `gorm:"foreignKey:UserID;references:ID" json:"user"`
-	ScheduleID   *uint     `gorm:"not null" json:"schedule_id"`
-	ScheduleNote Schedule  `gorm:"foreignKey:ScheduleID;references:ID" json:"schedule_note"`
+	ScheduleID   uint      `gorm:"not null" json:"schedule_id"`
+	ScheduleNote Schedule  `gorm:"foreignKey:ScheduleID;references:ID;constraint:OnDelete:CASCADE;" json:"schedule_note"`
 }
 
-type SwagJournalNote struct {
-	ScheduleID *uint `gorm:"default:null" json:"schedule_id"`
-}
-
-type SwagJournalNotesOfChildren struct {
+type SwagJournalNotes struct {
 	Date        time.Time `gorm:"not null" json:"date"`
 	Group       string    `gorm:"not null" json:"group"`
 	StudentName string    `gorm:"not null" json:"student_name"`
@@ -31,4 +27,10 @@ type SwagJournalNotesOfChildren struct {
 type JournalDates struct {
 	DateFrom string `gorm:"not null" json:"date_from"`
 	DateTo   string `gorm:"not null" json:"date_to"`
+}
+
+type MarkSetter struct {
+	ScheduleNoteID uint `gorm:"not null" json:"schedule_note_id"`
+	MarkID         uint `gorm:"not null" json:"mark_id"`
+	StudentID      uint `gorm:"not null" json:"student_id"`
 }
